# tradingweb

./: .clang-format  .gitignore  CMakeLists.txt  Design.docx  HTTPServer.cpp  HTTPServer.hpp  HandlerFactory.cpp  HandlerFactory.hpp  Makefile  README.md  Readme.md  ServerApp.cpp  build.sh  conanfile.txt  database_config.json  get_stock_data.sh  premake4.lua  recreate_database.sh  run_tests.sh
database/: schema.sql
handler/: Home.cpp  Home.hpp  Login.cpp  Login.hpp  RegisterTrader.cpp  RegisterTrader.hpp  SignUp.cpp  SignUp.hpp  StaticContent.cpp  StaticContent.hpp
src/: HTTPServer.cpp  HandlerFactory.cpp  app.cpp
src/handler/: Home.hpp  RegisterTrader.cpp  SignUp.cpp  SignUp.hpp
templates/: dashboard.html  signup.html  welcome_no_credentials.html
trading/src/: CMakeLists.txt  HTTPServer.cpp  HTTPServer.hpp  HandlerFactory.cpp  MySQLConnection.cpp  MySQLConnection.hpp  ServerApp.cpp  ServerApp.hpp  UserAuthentication.cpp  UserAuthentication.hpp
trading/src/handler/: Buy.cpp  Buy.hpp  CMakeLists.txt  Dashboard.cpp  Dashboard.hpp  Home.cpp  Login.cpp  Login.hpp  Portfolio.cpp  Portfolio.hpp  Quote.cpp  Quote.hpp  RegisterTrader.cpp  RegisterTrader.hpp  SignUp.cpp  StaticContent.cpp  StockOperation.cpp  StockOperation.hpp  Transactions.cpp  Transactions.hpp
trading/testsuite/src/: CMakeLists.txt  HTTPServerTest.cpp  HTTPServerTest.hpp  Main.cpp
